--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: clojure
-lein: 2.6.1
-dist: xenial
+dist: bionic
+before_deploy: ./scripts/prepare-deploy.sh
 deploy:
   provider: pages
   skip_clean: true
