Fix deploy pipeline

--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -2,18 +2,23 @@ name: Clojure CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Install dependencies
-      run: lein deps
-    - name: Generate site
-      run: lein run
+      - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: lein deps
+      - name: Generate site
+        run: lein run
+      - name: Configure deploy
+        run: sh ./scripts/prepare-deploy.sh
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: public # The folder the action should deploy.
