--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -7,11 +7,12 @@ on:
     branches: ["master"]
 
 jobs:
-  build:
+  build-and-deploy:
+    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
       - name: Install dependencies
         run: lein deps
       - name: Generate site
