Fix deploy action

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -75,5 +75,6 @@ jobs:
     needs: build
     steps:
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: public # The folder the action should deploy.
