Revert "Fix deploy action"
This reverts commit ab1b2be02303a2b2d97fbe5dba217136007d6065.

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -75,6 +75,5 @@ jobs:
     needs: build
     steps:
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: public # The folder the action should deploy.
+        id: deployment
+        uses: actions/deploy-pages@v4
